[tool.poetry]
name = "beam"
version = "2.2.0"
description = ""
authors = ["hydr0nium <37932436+hydr0nium@users.noreply.github.com>"]
readme = "README.md"
packages = [
   { include = "beam"}
]


[tool.poetry.dependencies]
python = "^3.12"
toml = "^0.10.2"


[tool.poetry.scripts]
beam = "beam.beam:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
